--- a/amazon-clone/src/Header.css
+++ b/amazon-clone/src/Header.css
@@ -54,7 +54,7 @@
     font-weight: 800;
 }
 
-header__optionLineTwo{
+.header__optionLineTwo{
     font-size: 8px;
 }
 
@@ -64,7 +64,7 @@ header__optionLineTwo{
     color: white;
 }
 
-.heaader__basketCount{
+.header__basketCount{
     margin-left:10px;
     margin-right:10px;
 }
