--- a/amazon-clone/src/Product.css
+++ b/amazon-clone/src/Product.css
@@ -23,8 +23,8 @@
     background: #f0c14b;
     border: 1px solid;
     margin-top: 10px;
-    border-color: #a8a8a8;
-
+    border-color: #a8a8a8 #9c7e31 #846a29;
+    color: #111;
 }
 
 .product__price{
@@ -32,7 +32,8 @@
 }
 
 .product__info {
-
+    height: 100px;
+    margin-bottom: 15px;
 }
 
 .product__rating{
