finished first module

--- a/amazon-clone/src/Home.css
+++ b/amazon-clone/src/Home.css
@@ -19,3 +19,7 @@
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 }
+
+.header__basketCount {
+	margin: 0 10px;
+}
