--- a/amazon-clone/src/Home.css
+++ b/amazon-clone/src/Home.css
@@ -23,3 +23,10 @@
 .header__basketCount {
 	margin: 0 10px;
 }
+
+.header__logo {
+	width: 100px;
+	object-fit: contain;
+	margin: 0 20px;
+	margin-top: 18px;
+}
