--- a/amazon-clone/src/Payment.css
+++ b/amazon-clone/src/Payment.css
@@ -25,6 +25,7 @@
   flex: 0.2;
 }
 
-.payment__address, .payment__items{
+.payment__address, .payment__items , .payment__details {
     flex: 0.8;
 }
+
